<?xml version="1.0"?>
<package format="2">
  <name>arm_teleop_2</name>
  <version>0.1.0</version>
  <description>A tutorial package for using the MoveIt Commander interface in Python</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>